# researchSwarm

./: .env.example  .gitignore  Overview.md  PROJECT_PLANS.md  README.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.sh  teardown.sh
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
agents/: __init__.py  config.py  context.py  graph.py  response_models.py  state.py  tracing.py
agents/nodes/: __init__.py  analyst.py  critic.py  researcher.py  synthesizer.py
agents/prompts/: __init__.py  analyst.py  critic.py  researcher.py  synthesizer.py
agents/tools/: __init__.py  discovery.py  registry_client.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_conversation_session_tables.py
conversation/: __init__.py  authz.py  config.py  coordinator.py  intent.py  merge.py  models.py  rewrite.py  routing.py
conversation/api/: __init__.py  routes.py
conversation/persistence/: __init__.py  mysql_models.py  mysql_store.py  redis_store.py
postman/: researchSwarm.postman_collection.json
registry/: __main__.py  app.py  config.py  database.py  embeddings.py  models.py  schemas.py  search.py  seed.py  stats_percentiles.py
registry/middleware/: logging.py
registry/routers/: bind.py  health.py  register.py  search.py  stats.py  usage.py
scripts/: alembic_upgrade_lenient.py
specs/001-tool-registry-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-agent-layer/: data-model.md  (+5 more)
tests/: conftest.py
web/: .env.example  package-lock.json  package.json  vite.config.ts
(+126 files in other folders)
